--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -26,7 +26,7 @@ prepend_sys_path = .
 # set to 'true' to run the environment during the 'revision' command,
 # regardless of autogenerate; use this to autogenerate a new migration
 # file for changes to a reflected table
-# revision_environment = false
+revision_environment = true
 
 # set to 'true' to allow .pyc and .pyo files without a source .py
 # file to be detected as revisions in the script location.
